# controllers/comments.js
@@ -1,7 +1,6 @@
 const mongodb = require('../data/data');
 const ObjectId = require('mongodb').ObjectId;
 
-
 const getAll = async (req, res) => {
   //#swagger.tags=['Comments']
   //#swagger.description='Finds all comments'
@@ -9,11 +8,11 @@ const getAll = async (req, res) => {
   const result = await mongodb
     .getDatabase()
     .db('sample_mflix')
-    .collection('commets')
+    .collection('comments')
     .find();
-  result.toArray().then((users) => {
+  result.toArray().then((Comments) => {
     res.setHeader('Content-type', 'application/json');
-    res.status(200).json(users);
+    res.status(200).json(Comments);
   });
 };
 
@@ -31,7 +30,7 @@ const getSingle = async (req, res, next) => {
     const result = await mongodb
       .getDatabase()
       .db('sample_mflix')
-      .collection('commets')
+      .collection('comments')
       .find({ _id: departmentID })
       .toArray();
 
@@ -46,7 +45,98 @@ const getSingle = async (req, res, next) => {
   }
 };
 
-module.exports = { 
+const createComment = async (req, res) => {
+  //#swagger.tags=['Comments']
+  //#swagger.description='Create a new comment'
+  //#swagger.summary='Create a new comment'
+  try {
+    const comment = {
+      name: req.body.name,
+      email: req.body.email,
+      password: req.body.password,
+    };
+
+    const response = await mongodb
+      .getDatabase()
+      .db('sample_mflix')
+      .collection('comments')
+      .insertOne(comment);
+
+    res.status(201).json({
+      message: 'Comment created successfully',
+      comment: response.ops[0],
+    });
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+};
+
+const updateComment = async (req, res) => {
+  //#swagger.tags=['Comments']
+  //#swagger.description='Update a comment in the database'
+  //#swagger.summary='Update a comment'
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res
+        .status(400)
+        .json('Must use a valid comment id to update comment information.');
+      return;
+    }
+
+    const commentId = new ObjectId(req.params.id);
+    const updatedComment = {
+      name: req.body.name,
+      email: req.body.email,
+      password: req.body.password,
+    };
+
+    const response = await mongodb
+      .getDatabase()
+      .db('sample_mflix')
+      .collection('comments')
+      .updateOne({ _id: commentId }, { $set: updatedComment });
+
+    if (response.modifiedCount > 0) {
+      res.status(202).send('Comment information updated successfully');
+    } else {
+      res.status(404).send('comment not found');
+    }
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+};
+
+const deleteComment = async (req, res) => {
+  //#swagger.tags=['Comments']
+  //#swagger.description='Deletes a comment from the database'
+  //#swagger.summary='Deletes a comment'
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid comment id to delete a comment.');
+      return;
+    }
+
+    const commentId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDatabase()
+      .db('sample_mflix')
+      .collection('comments')
+      .deleteOne({ _id: commentId });
+
+    if (response.deletedCount > 0) {
+      res.status(202).send('Comment deleted successfully');
+    } else {
+      res.status(404).send('Comment not found');
+    }
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+};
+
+module.exports = {
   getAll,
-  getSingle
- };
+  getSingle,
+  createComment,
+  updateComment,
+  deleteComment,
+};
